apps/ejnmeal-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ejnmeal-be
  namespace: api
  labels:
    app: ejnmeal-be
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: ejnmeal-be
